<resources>
    <string name="app_name">Medicine Reminder</string>
    <string name="date">DATE</string>
    <string name="set_date">SET DATE</string>
    <string name="time">TIME</string>
    <string name="set_time">SET TIME</string>
    <string name="enter_medicine_name">Enter medicine name</string>
    <string name="submit">SUBMIT</string>
    <string name="medicine">Medicine</string>
    <string name="todo">TODO</string>

</resources>
