<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EE82EE"
    tools:context=".Main2Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EE82EE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/in_date"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            app:srcCompat="@drawable/calender"
            tools:layout_editor_absoluteX="328dp"
            tools:layout_editor_absoluteY="180dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/in_date"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_date"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="38dp"
            android:text="@string/date"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="94dp"
            android:layout_height="47dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="200dp"
            android:background="#006400"
            android:text="@string/set_date"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_time"
            app:layout_constraintEnd_toStartOf="@+id/in_date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:id="@+id/in_time"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_time"
            android:layout_alignStart="@+id/in_date"
            android:text="@string/time"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_time"
            android:layout_width="96dp"
            android:layout_height="46dp"
            android:layout_alignLeft="@+id/btn_date"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/btn_date"
            android:layout_marginBottom="141dp"
            android:background="#006400"
            android:text="@string/set_time"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/in_time"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/imageView3"
            android:layout_alignTop="@+id/button2"
            android:ems="10"
            android:hint="@string/enter_medicine_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="180dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="49dp"
            android:layout_height="45dp"
            android:layout_alignBottom="@+id/in_time"
            android:layout_alignLeft="@+id/imageView3"
            android:layout_alignStart="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/in_time"
            app:srcCompat="@drawable/clock"
            tools:layout_editor_absoluteY="299dp"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="43dp"
            android:layout_marginEnd="107dp"
            android:background="#1E90FF"
            android:text="@string/submit"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_date"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/btn_date"
            android:layout_marginTop="77dp"
            android:background="#006400"
            android:text="@string/medicine"
            android:textColor="#ffffff"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_date"
            app:layout_constraintEnd_toStartOf="@+id/editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
